# platform.core.api.vpn-setting

./: AUTHORS  CMakeLists.txt  ChangeLog
dvpnlib/include/: debug.h  dvpnlib-common.h  dvpnlib-internal.h  dvpnlib-vpn-connection.h  dvpnlib-vpn-manager.h  dvpnlib-vpn.h
dvpnlib/src/: dvpnlib-vpn-connnection.c  dvpnlib-vpn-manager.c  dvpnlib-vpn.c  dvpnlib.c
include/: vpn.h
packaging/: capi-network-vpn-setting.spec  capi-network-vpn.spec
src/: vpn-internal.c  vpn.c
src/include/: common.h  vpn-internal.h
test/: CMakeLists.txt  vpn_test.c
